projects/session-07/iac/kubernetes/overlays/staging/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tts-web-staging
spec:
  ingressClassName: nginx
  rules:
    - host: staging.tts.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8000
